--- a/index.html
+++ b/index.html
@@ -1,22 +1,28 @@
-
-+--------------------------<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <link rel="stylesheet" href="style.css" type="text/css" />
-    <title>tarea 1</title>
+    <link rel="stylesheet" href="estilo.css" />
+    <title>Sesión N°5</title>
   </head>
   <body>
-   <imag src="logo arukay.png" usemap="#image-map">
-
-    <map name="image-map">
-      
-    <area target="" alt="" title="" href="" coords="108,86,77"
-    <area target="" alt="" title="" href="" coords="17,170,197,218"
-
-  
-  </map>
+    <h1>Heladeria wow</h1>
+    <table width="100px" table border="3">
+      <tr>
+        <td class="encabezado">Copas</td>
+        <td class="encabezado">Ingredientes</td>
+      </tr>
+      <tr>
+        <td>
+          <img class="imagen" src="copa1.jpg" />
+        </td>
+        <td>
+          3 porciones de Helado que acompañan la frescura del Kiwi, Manzana,
+          Pera, Fresa, Uchuva, Durazno, Uva y Cereza.
+        </td>
+      </tr>
+    </table>
   </body>
 </html>
